# capstone_scales

./: LICENSE  README.md
simulation_ws/devel/: .catkin  .rosinstall
simulation_ws/src/my_simulations/: package.xml
simulation_ws/src/my_simulations/launch/: scales_world.launch
simulation_ws/src/my_simulations/world/: scales_world.world
src/scale_controller/: CMakeLists.txt  package.xml
src/scale_controller/include/scale_cont/: scale_cont.h
src/scale_controller/launch/: scale_controller.launch
src/scale_controller/src/: scale_cont.cpp  scale_cont_node.cpp
src/scale_frds_pkg/: CMakeLists.txt  package.xml
src/scale_frds_pkg/launch/: gaz_to_ros_relay_frds.launch
src/scale_frds_pkg/src/: gazebo_transport_to_ros_topic_frds.cpp
src/scale_frps_pkg/: CMakeLists.txt  package.xml
src/scale_frps_pkg/launch/: gaz_to_ros_relay_frps.launch
src/scale_frps_pkg/src/: gazebo_transport_to_ros_topic_frps.cpp
src/scale_rds_pkg/: CMakeLists.txt  package.xml
src/scale_rds_pkg/launch/: gaz_to_ros_relay_rds.launch
src/scale_rds_pkg/src/: gazebo_transport_to_ros_topic_rds.cpp
src/scale_rps_pkg/: CMakeLists.txt  package.xml
src/scale_rps_pkg/launch/: gaz_to_ros_relay_rps.launch
src/scale_rps_pkg/src/: gazebo_transport_to_ros_topic_rps.cpp
